updated unittest
